--- a/views/listings/edit.ejs
+++ b/views/listings/edit.ejs
@@ -20,6 +20,11 @@
             Please enter a short description.
           </div>
         </div>
+
+
+        <!-- <div class="mb-3">
+            <label for="image" class="form-label">Image Link</label>
+        <input name="listing[image]" value="<%#= listing.image %>" type="text" class="form-control" required> -->
         <div class="mb-3">
             Original Listing Image <br>
             <img class="show-img" src="<%= bluredImage %>" />
@@ -54,9 +59,29 @@
         <div class="invalid-feedback">
             Location should be valid.
           </div>
+
+          <div class="mb-3 col-md-5">
+            <div class="dropdown">
+                <label for="category" class="form-label">Category</label>
+                <select id="category" name="listing[category]" class="form-control" required>
+                    <option disabled selected value>--Select Category--</option>
+                    <option value="Rooms">Rooms</option>
+                    <option value="Mountains">Mountains</option>
+                    <option value="Beach">Beach</option>
+                    <option value="Arctic">Arctic</option>
+                    <option value="Iconic Cities">Iconic Cities</option>
+                    <option value="Farms">Farms</option>
+                    <option value="Camping">Camping</option>
+                    <option value="Castles">Castles</option>
+                    
+                    <option value="Amazing Pools">Amazing Pools</option>
+                </select>
+            </div>
+            </div>
         </div>
 
-        <button class="btn btn-dark edit-btn mt-3">Edit</button>
+        <button class="btn btn-dark edit-btn mt-3 mb-3">Edit</button>
     </form>
 </div>
 </div>
+<!-- <script src="/js/script.js"></script> -->
