--- a/views/listings/new.ejs
+++ b/views/listings/new.ejs
@@ -56,8 +56,27 @@
           </div>
     </div>
 
+    <div class="mb-3 col-md-5">
+        <div class="dropdown">
+            <label for="category" class="form-label">Category</label>
+            <select id="category" name="listing[category]" class="form-control" required>
+                <option disabled selected value>--Select Category--</option>
+                <option value="Rooms">Rooms</option>
+                <option value="Mountains">Mountains</option>
+                <option value="Beach">Beach</option>
+                <option value="Arctic">Arctic</option>
+                <option value="Iconic Cities">Iconic Cities</option>
+                <option value="Farms">Farms</option>
+                <option value="Camping">Camping</option>
+                <option value="Castles">Castles</option>
+                
+                <option value="Amazing Pools">Amazing Pools</option>
+            </select>
+        </div>
+      </div>
+</div>
 
-        <button class="btn btn-dark add-btn">Add</button>
+        <button class="btn btn-dark add-btn mt-3 mb-3">Add</button>
         <br>  <br>
     </form>
 </div>
