--- a/views/listings/index.ejs
+++ b/views/listings/index.ejs
@@ -1,87 +1,14 @@
 <% layout("/layouts/boilerplate") -%> 
-<style>
- #filters{
-  display:flex;
-  flex-wrap: wrap;
-  align-items: center;
- }
- .filter{
-  text-align: center;
-  margin-right: 2rem;
-  margin-top: 2rem;
-  opacity: 0.7;
- }
- .filter:hover{
-  opacity:1;
-  cursor: pointer;
- }
- .filter p{
-  font-size: 0.8rem;
 
-.tax-info{
-  display: none;
-}
-  .tax-toggle{
-    border:2px solid black;
-    border-radius: 1rem;
-    height:3.5rem;
-    padding:1rem;
-    margin-left: 3rem;
-    display: flex;
-    align-items: center;
-  }
- }
-</style>
-    <div id="filters">
-      <div class="filter">
-       <div><i class="fa-solid fa-fire"></i></div> 
-       <p>Trending</p>
-      </div>
-      <div class="filter">
-        <div><i class="fa-solid fa-bed"></i></div> 
-        <p>Rooms</p>
-       </div>
-       <div class="filter">
-        <div><i class="fa-solid fa-mountain-city"></i></div> 
-        <p>Iconic cities</p>
-       </div>
-       <div class="filter">
-        <div><i class="fa-solid fa-mountain"></i></div> 
-        <p>Mountains</p>
-       </div>
-       <div class="filter">
-        <div><i class="fa-brands fa-fort-awesome"></i></div> 
-        <p>Castles</p>
-       </div>
-       <div class="filter">
-        <div><i class="fa-solid fa-person-swimming"></i></div> 
-        <p>Amazing Pools</p>
-       </div>
-       <div class="filter">
-        <div><i class="fa-solid fa-tents"></i></div> 
-        <p>Camping</p>
-       </div>
-       <div class="filter">
-        <div><i class="fa-solid fa-cow"></i></div> 
-        <p>Farms</p>
-       </div>
-       <div class="filter">
-        <div><i class="fa-solid fa-snowflake"></i></div> 
-        <p>Arctic</p>
-       </div>
-
-       <div class="filter">
-        <div><i class="fa-solid fa-igloo"></i></div> 
-        <p>Domes</p>
-       </div>
-
-       
-
-       <div class="filter">
-        <div><i class="fa-solid fa-sailboat"></i></div> 
-        <p>Boats</p>
-       </div>
-
+       <div id="filters" class="phone-view">
+        <div class="filters">
+            <%for(filter of filterList){%>
+                <div class="filter" data-category="<%= filter.text %>">
+                    <div><i class="<%= filter.icon %>"></i></div>
+                    <p><%= filter.text %></p>
+                </div>
+            <%}%>
+        </div>
 
        <div class="tax-toggle" style="border:2px solid black;
        border-radius: 1rem;
@@ -99,9 +26,9 @@
 
     <div class="row row-cols-lg-3 row-cols-md-2 row-cols-sm-1 mt-3">
         <%  for(let listing of allListings){%>
-            <a href="/listings/<%= listing._id %>" class="listing-link">
+            <a href="/listings/<%= listing._id %>" class="listing-link" data-category="<%= listing.category %>">
             <div class="card col listing-card" style="width: 20rem;">
-
+                <!-- <img src="<%#= listing.image.url %>" class="card-img-top" alt="listing_image" style="height:20rem ;"> -->
                 <img
         src="<%= listing.image.url %>"
         class="card-img-top"
@@ -122,7 +49,41 @@
               <%  }  %>
     </div>
 
+
   <script>
+     document.addEventListener('DOMContentLoaded', function() {
+            const filters = document.querySelectorAll('.filter');
+            const listings = document.querySelectorAll('.listing-link');
+            // const searchInput = document.getElementById('searchInput');
+            // console.log(searchInput);
+            filters.forEach(filter => {
+                filter.addEventListener('click', function() {
+                    const selectedCategory = this.getAttribute('data-category');
+                    
+                    if (selectedCategory === 'Trending') {
+                        // Show all listings if 'Trending' filter is clicked
+                        listings.forEach(listing => {
+                            listing.style.display = 'block';
+                        });
+                    } else {
+                        // Filter listings based on selected category
+                        listings.forEach(listing => {
+                            const listingCategory = listing.getAttribute('data-category');
+                            if (selectedCategory === 'all' || selectedCategory === listingCategory) {
+                                    listing.style.display = 'block'; // Show the listing
+                            } else {
+                                listing.style.display = 'none'; // Hide the listing
+                            }
+                        });
+                    }
+                });
+            });
+    
+            // Show all listings initially
+            document.querySelector('.filter[data-category="Trending"]').click();
+     });
+
+
     let taxSwitch=document.getElementById("flexSwitchCheckDefault");
     taxSwitch.addEventListener("click",()=>{
       let taxInfo=document.getElementsByClassName("tax-info");
