--- a/views/listings/show.ejs
+++ b/views/listings/show.ejs
@@ -1,18 +1,22 @@
 <% layout("/layouts/boilerplate") %>
 <script>
-    const mapToken = "<%= process.env.MAP_TOKEN %>";
-   const listing = <%-JSON.stringify(listing)%>;
+   // const mapToken = "<%= process.env.MAP_TOKEN %>";
+ //const listing = <%- JSON.stringify(listing) %>; 
+
+const coordinates = <%- JSON.stringify(listing.geometry.coordinates) %>;
+const locate = <%- JSON.stringify(listing.location) %>;
 </script>
 <div class="row mt-3">
     <div class="col-8 offset-3">
     <h3> <%= listing.title %></h3>
 </div>
     <div class="card col-6 offset-3 show-card listing-card">
+        <!-- <img src="<%#= listing.image.url %>" class="card-img-top show-img" alt="Listing_image"> -->
         <img src="<%= listing.image.url %>" class="card-img-top show-img" id="image" alt="listing_img">
   <div class="card-body">
     <p class="card-text"> Owned by ~  <i><%= listing.owner.username  %></i></p>
     <p class="card-text">
-       <%= listing.title %></b> 
+       <!-- <b> <%= listing.title %></b> <br> -->
        <%= listing.description %> <br>
        &#8377; <%= listing.price.toLocaleString("en-IN") %> <br>
        <%= listing.location %> <br>
@@ -39,10 +43,10 @@
     <form action="/listings/<%= listing.id %>/reviews" method="post" novalidate class="needs-validation">
         <div class="mb-3 mt-3">
             <label for="rating" class="form-label">Rating</label>
-           
+            <!-- <input type="range" min="1" max="5" id="rating" name="review[rating]" class="form-range"> -->
             <fieldset class="starability-slot">
                         
-              
+                <!-- <input type="range" min="1" max="5" step="1" id="rating" name="reviews[rating]"> -->
                 <input type="radio" id="no-rate" class="input-no-rate" name="review[rating]" value="1" checked aria-label="No rating." />
                 <input type="radio" id="first-rate1" name="review[rating]" value="1" />
                 <label for="first-rate1" title="Terrible">1 star</label>
@@ -69,6 +73,15 @@
     <br> <% } %>
     <%  if(listing.reviews.length) {%>
     <p><b>All Reviews</b></p>
+    <!-- <p>
+        <%#=listing.reviews %>
+    </p> -->
+    <!-- <ul>
+        <%# for(review of listing.reviews) { %>
+                    <li><%#= review.comment%>,<%#= review.rating %>stars
+                    </li>
+            <%# } %> 
+    </ul> -->
      
 <div class="row">
     <% for(review of listing.reviews) { %>
@@ -82,7 +95,9 @@
                 <p class="card-text">
                     <%= review.comment%>
                 </p>
-              
+                <!-- <p class="card-text">
+                    <%#= review.rating%> stars
+                </p> -->
                 
                 <form class="mb-3" method="POST" action="/listings/<%= listing._id %>/reviews/<%=review._id%>?_method=DELETE">
                 <button class="btn btn-sm btn-dark">Delete</button>
