--- a/views/listings/edit.ejs
+++ b/views/listings/edit.ejs
@@ -52,14 +52,14 @@
           </div>
         </div>
     </div>
-
-        <div class="mb-3">
+<!-- <div class="row">  -->
+        <div class="mb-3 col-md-7">
             <label for="location" class="form-label">Location</label>
         <input name="listing[location]" value="<%= listing.location %>" type="text" class="form-control" required>
         <div class="invalid-feedback">
             Location should be valid.
           </div>
-
+</div>
           <div class="mb-3 col-md-5">
             <div class="dropdown">
                 <label for="category" class="form-label">Category</label>
