--- a/views/listings/index.ejs
+++ b/views/listings/index.ejs
@@ -10,13 +10,7 @@
             <%}%>
         </div>
 
-       <div class="tax-toggle" style="border:2px solid black;
-       border-radius: 1rem;
-    height:3.25rem;
-    padding:1rem;
-    margin-left: 3rem;
-    display: flex;
-    align-items: center;">
+       <div class="tax-toggle">
         <div class="form-check-reverse form-switch">
           <input class="form-check-input" type="checkbox" role="switch" id="flexSwitchCheckDefault">
           <label class="form-check-label" for="flexSwitchCheckDefault">Display total after taxes</label>
