--- a/views/listings/new.ejs
+++ b/views/listings/new.ejs
@@ -47,8 +47,8 @@
           </div>
     </div>
 </div>
-
-        <div class="mb-3">
+<div class="row">
+        <div class="mb-3 col-md-7">
         <label for="location" class="form-label">Location</label>
         <input name="listing[location]" placeholder="Jaipur,Rajasthan" type="text"  class="form-control" required>
         <div class="invalid-feedback">
